# Dagster

./: README.md  pyproject.toml  setup.cfg  setup.py
Dagst/: __init__.py  pipelines.py  pyproject.toml  workspace.yaml
Dagst.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
