[tool.poetry]
name = "Dagst"
version = "0.1.0"
description = ""
authors = ["Arina <arrishok@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.3"
setuptools = "^67.2.0"
dagster = "^1.1.17"
dagit = "^1.1.17"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
